...
                    android:text="We never take a cut. 100% of your tips goes to your packager."
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tipCourier" />

                <ImageButton
                    android:id="@+id/two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="44dp"
                    android:layout_marginLeft="44dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="20dp"
...
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="28dp"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/textView6"
                    app:layout_constraintTop_toBottomOf="@+id/price3"
                    android:layout_marginRight="28dp" />

                <TextView
                    android:id="@+id/price2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
